Fix static icons spacing issue

--- a/src/features/Hourly/Hourly.css
+++ b/src/features/Hourly/Hourly.css
@@ -51,6 +51,7 @@
 .sleet,
 .ice {
     display: flex;
+    padding-left: 0;
 }
 
 .fog {
