--- a/src/features/Next/Next.css
+++ b/src/features/Next/Next.css
@@ -55,6 +55,12 @@
     cursor: pointer;
 }
 
+.static {
+    display: flex;
+    width: 6rem;
+    height: 4rem;
+}
+
 .highLow,
 .temp {
     font-weight: 600;
